# jitjam

./: CMakeLists.txt  _utils.h  asm.h  bytecode.h  checked_ops.h  constructed_type.h  gen.h  jit_types.h  mem.cpp  mem.h  memory_prealloc.h  optimizer.h  readme.md  timeline_map.h  utils.cpp  utils.h
compiler/: opcodes.h
compiler/codegen/: asm.h  mem.h
compiler/mempack/: memory_prealloc.h
compiler/preprocess/: block.cpp  block.h  bytecode.cpp  bytecode.h  handles.h  instruction.h  runtime_values.h  var.h  variable_type.h
compiler/preprocess/constraints/: constraint_value.h  runtime_values.h  variable_bounds.h  variable_constraint.h  variable_constraints.h
compiler/preprocess/engine/: preprocess_engine.cpp  preprocess_engine.h
config/: jitjam_config.h  operator_overloads.h  type_conversions.h
handles/: handle_impls.h  handles.h
sljit/src/: sljitConfig.h  sljitConfigCPU.h  sljitConfigInternal.h  sljitLir.cpp  sljitLir.h  sljitNativeARM_32.c  sljitNativeARM_64.c  sljitNativeARM_T2_32.c  sljitNativeLOONGARCH_64.c  sljitNativeMIPS_32.c  sljitNativeMIPS_64.c  sljitNativeMIPS_common.c  sljitNativePPC_32.c  sljitNativePPC_64.c  sljitNativePPC_common.c  sljitNativeRISCV_32.c  sljitNativeRISCV_64.c  sljitNativeRISCV_common.c  sljitNativeS390X.c  sljitNativeX86_32.c  sljitNativeX86_64.c  sljitNativeX86_common.c  sljitSerialize.c  sljitUtils.c
sljit/src/allocator_src/: sljitExecAllocatorApple.c  sljitExecAllocatorCore.c  sljitExecAllocatorFreeBSD.c  sljitExecAllocatorPosix.c  sljitExecAllocatorWindows.c  sljitProtExecAllocatorNetBSD.c  sljitProtExecAllocatorPosix.c  sljitWXExecAllocatorPosix.c  sljitWXExecAllocatorWindows.c
sljit_interop/: arg_type_utils.h  jit_types.h
tests/: jit_codegen_test.cpp  jit_codegen_test.h  memory_prealloc_test.cpp  memory_prealloc_test.h  test_main.h  test_utils.h  test_variable_bounds.cpp  test_variable_bounds.h
